<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsDetailFragment"
    android:id="@+id/fragmentLocation"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="20dp"

    >
    <TextView
        android:id="@+id/news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/news_title_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fill_me"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/news_title"
        app:layout_constraintLeft_toLeftOf="parent"

        />
    <TextView
        android:id="@+id/news_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/news_title_data"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/news_description_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fill_me"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/news_description"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/news_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/news_description_data"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/news_date_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fill_me"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/news_date"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/news_URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/URL"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/news_date_data"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/news_URL_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fill_me"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/news_URL"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Button
        android:id="@+id/btn_add_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav_add_btn"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_URL_data"
        android:backgroundTint="@color/black"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/btn_delete_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav_del_btn"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_URL_data"
        android:backgroundTint="@color/black"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>