<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddArticleActivity">

    <include
        layout="@layout/the_toolbar"
        />


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:id="@+id/tb_division"
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/Dark"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/news_reel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_activity"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tb_division"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="10dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_reel"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                />
            <EditText
                android:id="@+id/news_title_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"

                />
            <TextView
                android:id="@+id/news_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_title_data"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/news_description_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_description"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"
                />

            <TextView
                android:id="@+id/news_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_description_data"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/news_date_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_date"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"
                />
            <TextView
                android:id="@+id/news_URL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/URL"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_date_data"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                />
            <EditText
                android:id="@+id/news_URL_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_URL"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"
                />
            <Button
                android:id="@+id/btn_add_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fav_add_btn"
                android:textAllCaps="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_URL_data"
                android:backgroundTint="@color/black"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/the_navbar"></include>

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>