<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeLanguageActivity">
    <include
        layout="@layout/the_toolbar"
        />


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:id="@+id/tb_division"
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/Dark"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/news_reel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_activity"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:textStyle="bold"
                android:paddingBottom="40dp"
                app:layout_constraintTop_toBottomOf="@id/tb_division"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <Button
                android:id="@+id/btnEnglish"
                android:textColor="#ffffff"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/eng_btn"
                android:backgroundTint="@color/black"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@id/news_reel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:cornerRadius="5dp"
                />

            <Button
                android:id="@+id/btnFrench"
                android:textColor="#ffffff"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/fre_btn"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                android:textSize="20dp"
                app:cornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@id/btnEnglish"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/the_navbar"></include>

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>